fix: vertical align of img

--- a/src/pages/deck/myDeckTable/myDeckTable.module.scss
+++ b/src/pages/deck/myDeckTable/myDeckTable.module.scss
@@ -15,5 +15,6 @@
 .deckPreview {
   width: 118px;
   height: 48px;
+  vertical-align: middle;
   object-fit: contain;
 }
